# OGLRenderer

./: .gitignore  CMakeLists.txt  LICENSE.txt  OGLRenderer.sln  README.md  imgui.ini
OGLRenderer/: OGLRenderer.vcxproj  OGLRenderer.vcxproj.filters  Shader.cpp  Shader.hpp  camera.cpp  glad.c  imgui.ini  main.cpp  mesh.cpp  model.cpp  modelManager.cpp  shader.frag  texture.cpp
OGLRenderer/assets/models/axel/: Axel.mtl
OGLRenderer/assets/models/beachSceneTextured/: beachScene.mtl
OGLRenderer/assets/models/blitzball/: blitzball.mtl
OGLRenderer/assets/models/checkeredPlane/: checkeredPlane.mtl
OGLRenderer/assets/models/kairi/: Kairi_KH1.smd
OGLRenderer/include/: camera.hpp  mesh.hpp  model.hpp  modelManager.hpp  texture.hpp
OGLRenderer/shaders/: blinnPhong.frag  blinnPhong.vert  flat.frag  flat.vert  gouraud.frag  gouraud.vert  lightSource.frag  phong.frag  shader.frag  shader.vert
assets/models/betterCube/: betterCube.mtl
assets/models/brickWall/: brickWall.mtl
assets/models/sponza/: sponza.mtl
assets/models/terrain/: terrain.mtl
assets/textures/hdrSkybox/irradiance/: negy.hdr
assets/textures/hdrSkybox/prefilter/: negy.hdr  posx.hdr  posy.hdr
assets/textures/snowfield/irradiance/: nx.hdr  nz.hdr  px.hdr  py.hdr  pz.hdr
assets/textures/snowfield/radiance/: nx.hdr  nz.hdr  pz.hdr
include/: camera.hpp  mesh.hpp  model.hpp  physics.hpp  shader.hpp
shaders/: blinnPhong.frag  blinnPhong.vert  postprocess.frag  shadowMap.vert  skybox.frag
src/: camera.cpp  main.cpp  mesh.cpp  model.cpp  physics.cpp  shader.cpp
x64/Debug/: imgui.ini
x64/Release/: imgui.ini
